# cpp_students

./: .clang-format  CMakeLists.txt  Makefile  TODO.md  students.json
include/: Activity.h  InputReader.h  Menus.h  StringHelper.h  Student.h
include/cpa/: config.h.in
src/: InputReader.cpp  main.cpp
